--- a/user/themes/bootstrap/templates/partials/base.html.twig
+++ b/user/themes/bootstrap/templates/partials/base.html.twig
@@ -46,5 +46,20 @@
 
 
             </head>
-            <body></body>
+
+            <body>
+                {# include the header + navigation #}
+                {% include 'partials/header.html.twig' %}
+
+                <div class="container">
+                    {% block content %}{% endblock %}
+                </div>
+
+                <div class="footer">
+                    <div class="container">
+                        <p class="text-muted">Bootstrap Theme for <a href="http://getgrav.org">Grav</a></p>
+                    </div>
+                </div>
+            </body>
+            {% block bottom %}{%  endblock %}
         </html>
